--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </div>
 
     <div class="card">
-      <img src="rebeca.jpg">
+      <img src="rebeca.JPG">
       <h2>Rebeca Esteves</h2>
       <p>Fotógrafa & Copywriter</p>
       <p>Sempre sonhei com o meu grande dia, e hoje, poder fazer parte do sonho de outros casais é como viver sonhando!</p>
